--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./artist.html">Artistas</a></li>
-                <li><a href="./events.html">Eventos</a></li>
+                <li><a href="./explore.html#artist">Artistas</a></li>
+                <li><a href="./explore.html#events">Eventos</a></li>
                 <li><a href="./contact.html">Contacto</a></li>
                 <li><a href="./register.html">Alta</a></li>
             </ul>
@@ -33,7 +33,7 @@
                 <p>4 dias, 6 escenarios y mas de 120 artists en el corazon de Barcelona.</p>
                 <p>Vive un show inmersivo con sonido 360º</p>
                 <div>
-                    <a href="./tickets.html" class="mainBtn primary">Entradas</a>
+                    <a href="./register.html" class="mainBtn primary">Entradas</a>
                     <a href="./explore.html" class="mainBtn secondary">Descubrir Musica</a>
                 </div>
                 <div class="homeTags">
@@ -44,91 +44,91 @@
             </article>
             <img src="./assets/img/homepage/homepage.png" alt="Festival SoundTecITB">
         </section>
-        <section class="launches">
+        <section class="releases">
             <div>
                 <header>
                     <h2>Lanzamientos</h2>
-                    <a href="./explore.html">Ver todo</a>
+                    <a href="./explore.html#releases">Ver todo</a>
                 </header>
                 <div>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Neon Skies">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Neon Skies">
                         <div>
                             <h3>Neon Skies</h3>
                             <p>Atlas · Synthpop</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Hologram">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Hologram">
                         <div>
                             <h3>Hologram</h3>
                             <p>Kaia Nova · Electropop</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Mar de Sonidos">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Mar de Sonidos">
                         <div>
                             <h3>Mar de Sonidos</h3>
                             <p>Marea Azul · Dream pop</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Altitude">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Altitude">
                         <div>
                             <h3>Altitude</h3>
                             <p>Vértigo · Electronica</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Midnight City">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Midnight City">
                         <div>
                             <h3>Midnight City</h3>
                             <p>Neon Parade · SynthTecITB</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Echoes">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Echoes">
                         <div>
                             <h3>Echoes</h3>
                             <p>Arpeggio · Ambient</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Stardust">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Stardust">
                         <div>
                             <h3>Stardust</h3>
                             <p>Halo · Alt Pop</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Paper TecITBs">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Paper TecITBs">
                         <div>
                             <h3>Paper TecITBs</h3>
                             <p>Lykke · Indie</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Solaris">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Solaris">
                         <div>
                             <h3>Solaris</h3>
                             <p>Dorian · Alt Rock</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                     <article>
-                        <img src="./assets/img/launches/launches.png" alt="Portada de Oblivion">
+                        <img src="./assets/img/releases/releases.png" alt="Portada de Oblivion">
                         <div>
                             <h3>Oblivion</h3>
                             <p>M83 · Synth</p>
-                            <a href="./info.html">Más info</a>
+                            <a href="./details.html">Más info</a>
                         </div>
                     </article>
                 </div>
@@ -138,7 +138,7 @@
             <div>
                 <header>
                     <h2>Artistas destacados</h2>
-                    <a href="./ranking.html">Var Ranking</a>
+                    <a href="./explore.html#artist">Var Ranking</a>
                 </header>
                 <div>
                     <article>
@@ -200,69 +200,85 @@
                 </div>
             </div>
         </section>
-        <section class="festivals">
+    </main>
+    <section class="festivals">
+        <div>
             <header>
                 <h2>Festivales</h2>
                 <p>Barcelona</p>
             </header>
-            <article>
-                <img src="./assets/img/festivals/primavera_sound.png" alt="Festival de Primavera Sound">
-                <h3>Primavera Sound</h3>
-                <p>Barcelona · Finales de mayo/primera semana de junio · Headlines: varios</p>
-                <span>Indle</span>
-                <span>Electónica</span>
-                <span>Pop</span>
-            </article>
-            <article>
-                <img src="./assets/img/festivals/aurora_fest.png" alt="Festival de Aurora Fest">
-                <h3>Aurora Fest</h3>
-                <p>Montjuïc · 12-14 Jul · Headlines: Atlas, Kaia Nova</p>
-                <span>Escenografía</span>
-                <span>Sostenible</span>
-                <span>Experiencial</span>
-            </article>
-            <article>
-                <img src="./assets/img/festivals/altitude.png" alt="Festival de Altitude">
-                <h3>Altitude</h3>
-                <p>Andorra · 20-22 Feb · Headlines: M83, Halo</p>
-                <span>Major DJ</span>
-                <span>Tecnología</span>
-                <span>Aftermovie</span>
-            </article>
-        </section>
-        <aside class="aside">
-            <article>
-                <img src="./assets/img/festivals/spotify.png" alt="Spotify">
-                <h3>Escúchalo en Spotify</h3>
-                <p>Playlist «SoundWave Hits»</p>
-                <a href="https://open.spotify.com/">Abrir App</a>
-            </article>
-            <article>
-                <img src="./assets/img/festivals/radio.png" alt="Radio Indie BCN">
-                <h3>Radio Indie BCN</h3>
-                <p>Emisión en directo · 24/7</p>
-                <a href="./radio.html">Escuchar</a>
-            </article>
-        </aside>
-        <section class="top10">
-            <header>
-                <h2>Lo más escuchado · Top 10</h2>
-                <a href="https://open.spotify.com/playlist/">Playlist</a>
-            </header>
-            <ol>
-                <li><p>Kaia Nova -&nbsp;<span>Hologram</span></p></li>
-                <li><p>Atlas -&nbsp;<span>Neon Skies</span></p></li>
-                <li><p>Vértigo -&nbsp;<span>Altitude</span></p></li>
-                <li><p>Marea Azul -&nbsp;<span>Mar de Sonidos</span></p></li>
-                <li><p>Neon Parade -&nbsp;<span>Midnight City</span></p></li>
-                <li><p>Halo -&nbsp;<span>Stardust</span></p></li>
-                <li><p>Lykke -&nbsp;<span>Paper TecITBs</span></p></li>
-                <li><p>Dorian -&nbsp;<span>Solaris</span></p></li>
-                <li><p>M83 -&nbsp;<span>Oblivion</span></p></li>
-                <li><p>Arpeggio -&nbsp;<span>Echoes</span></p></li>
-            </ol>
-        </section>
-    </main>
+            <div>
+                <div class="festivalMainSection">
+                    <article>
+                        <img src="./assets/img/festivals/festival.png" alt="Festival de Primavera Sound">
+                        <div>
+                            <h3>Primavera Sound</h3>
+                            <p>Barcelona · Finales de mayo/primera semana de junio · Headlines: varios</p>
+                            <span>Indle</span>
+                            <span>Electónica</span>
+                            <span>Pop</span>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/festivals/festival.png" alt="Festival de Aurora Fest">
+                        <div>
+                            <h3>Aurora Fest</h3>
+                            <p>Montjuïc · 12-14 Jul · Headlines: Atlas, Kaia Nova</p>
+                            <span>Escenografía</span>
+                            <span>Sostenible</span>
+                            <span>Experiencial</span>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/festivals/festival.png" alt="Festival de Altitude">
+                        <div>
+                            <h3>Altitude</h3>
+                            <p>Andorra · 20-22 Feb · Headlines: M83, Halo</p>
+                            <span>Major DJ</span>
+                            <span>Tecnología</span>
+                            <span>Aftermovie</span>
+                        </div>
+                    </article>
+                </div>
+                <aside>
+                    <article>
+                        <img src="./assets/img/festivals/spotify.png" alt="Spotify">
+                        <div>
+                            <h3>Escúchalo en Spotify</h3>
+                            <p>Playlist «SoundWave Hits»</p>
+                            <a href="https://open.spotify.com/" class="mainBtn primary">Abrir App</a>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/img/festivals/radio.png" alt="Radio Indie BCN">
+                        <div>
+                            <h3>Radio Indie BCN</h3>
+                            <p>Emisión en directo · 24/7</p>
+                            <a href="./radio.html" class="mainBtn secondary">Escuchar</a>
+                        </div>
+                    </article>
+                </aside>
+            </div>
+        </div>
+    </section>
+    <section class="top10">
+        <header>
+            <h2>Lo más escuchado · Top 10</h2>
+            <a href="https://open.spotify.com/playlist/">Playlist</a>
+        </header>
+        <ol>
+            <li><p>Kaia Nova -&nbsp;<span>Hologram</span></p></li>
+            <li><p>Atlas -&nbsp;<span>Neon Skies</span></p></li>
+            <li><p>Vértigo -&nbsp;<span>Altitude</span></p></li>
+            <li><p>Marea Azul -&nbsp;<span>Mar de Sonidos</span></p></li>
+            <li><p>Neon Parade -&nbsp;<span>Midnight City</span></p></li>
+            <li><p>Halo -&nbsp;<span>Stardust</span></p></li>
+            <li><p>Lykke -&nbsp;<span>Paper TecITBs</span></p></li>
+            <li><p>Dorian -&nbsp;<span>Solaris</span></p></li>
+            <li><p>M83 -&nbsp;<span>Oblivion</span></p></li>
+            <li><p>Arpeggio -&nbsp;<span>Echoes</span></p></li>
+        </ol>
+    </section>
     <footer class="footer">
         <div>
             <h1><a href="./index.html" title="Home">Sound<span>TecITB</span></a></h1>
